Later commit: Weather Dashboard project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <button class="menu-toggle hidden">
+        <i class="fas fa-bars"></i>
+    </button>
+    <div class="overlay"></div>
     <div class="dashboard">
         <aside class="sidebar">
             <div class="search-box">
